fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   box-sizing: border-box;
   color: rgba(16, 24, 40, 1);
   outline:none;
+  /* css debugger */
+  /* border:2px solid red; */
 }
 
 
@@ -55,7 +57,7 @@
 
 
 .contact-container {
-  width: 100%;
+
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -168,7 +170,7 @@ textarea {
   align-items: flex-start;
   padding: 12px 14px;
   gap: 8px;
-  width: 720px;
+  width: 100%;
   height: 132px;
   background: #FFFFFF;
   border: 1px solid #D0D5DD;
@@ -197,7 +199,7 @@ textarea {
   width: 100%;
   padding: 12px 20px;
   gap: 8px;
-  width: 720px;
+  width: 100%;
   height: 48px;
   background: #1570EF;
   border: 1px solid #1570EF;
@@ -391,21 +393,21 @@ main {
   align-items: center;
   padding: 10px 14px;
   gap: 8px;
-  width:343px;
+  width:100%;
   height: 44px;
   color: gray;
   border: 1px solid #D0D5DD;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 }
 textarea{
-  width: 343px;
+  width: 100%;
   height: 132px;
   border: 1px solid #D0D5DD;
 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 border-radius: 8px;
 }
 .radio_button>span {
-  width: 50%;
+  width: 100%;
 height: 48px;
   word-break: keep-all;
   font-weight: 400;
@@ -415,7 +417,7 @@ padding-right:5px;
 
 }
 .form-footer-text>input {
-  width: 343px;
+  width: 100%;
 height: 48px;
 }
 
